# KW_CV_homework

./: .gitignore  CMakeLists.txt  README.md
project/01_hello_opencv/: CMakeLists.txt
project/01_hello_opencv/01_01_hello_world/: CMakeLists.txt
project/01_hello_opencv/01_02_hello_opencv/: CMakeLists.txt
project/02_images/: CMakeLists.txt
project/02_images/02_04_convert_and_save_images/: CMakeLists.txt  main.cpp
project/02_images/02_05_split_and_merge_channels/: CMakeLists.txt  main.cpp
project/02_images/02_06_concatenate_gray_images/: main.cpp
project/02_images/02_08_region_of_interest/: main.cpp
project/03_videos_and_cameras/: CMakeLists.txt
project/03_videos_and_cameras/03_01_load_and_display_videos/: CMakeLists.txt  main.cpp
project/03_videos_and_cameras/03_02_load_and_display_videos_infinately/: main.cpp
project/03_videos_and_cameras/03_03_capture_images_from_camera/: main.cpp
project/03_videos_and_cameras/03_04_save_videos/: CMakeLists.txt  main.cpp
project/04_drawing/: CMakeLists.txt
project/04_drawing/04_01_access_pixels_fast/: main.cpp
project/04_drawing/04_02_access_pixels_safe/: main.cpp
project/04_drawing/04_03_access_pixels_random/: main.cpp
project/04_drawing/04_04_access_pixels_order/: main.cpp
project/04_drawing/04_05_drawing_shapes/: main.cpp
project/05_user_interface/: CMakeLists.txt
project/05_user_interface/05_01_keyboard_inputs/: main.cpp
project/71_template_1234567890_HW_01/: CMakeLists.txt
project/71_template_1234567890_HW_01/HW_01_01_draw_rectangle_wysiwyg/: CMakeLists.txt  main.cpp
project/71_template_1234567890_HW_01/HW_01_02_draw_rectangle_once/: main.cpp
project/71_template_1234567890_HW_01/HW_01_03_draw_rectangle_or_ellipse/: main.cpp
project/71_template_1234567890_HW_01/HW_01_04_draw_rectangle_or_ellipse_brush/: main.cpp
