cmake_minimum_required(VERSION 3.0...3.13)

# Sub-Projects
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/HW_01_01_draw_rectangle_wysiwyg")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/HW_01_02_draw_rectangle_once")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/HW_01_03_draw_rectangle_or_ellipse")
add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/HW_01_04_draw_rectangle_or_ellipse_brush")